# cfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  combinatorics.c
benchmark/: CMakeLists.txt  bench_big.cpp  bench_monty.cpp  bench_mul_vs_csa.cpp  bench_row_mul.cpp  big_bench.cpp
cmake/: cfxCompileFlags.cmake  cfxConfig.cmake.in
examples/: choose.c  dcmini.c  demo.c  div.c  factorial.c  find_prime.c  fread.c  pow.c  prime_test.c  primes.c
include/cfx/: algo.h  big.h  cfx.h  error.h  fac.h  factorization.h  fmt.h  macros.h  num.h  primes.h  types.h  vector.h  version.h
src/: algo.c  big.c  error.c  fac.c  factorization.c  primes.c  vector.c
tests/: test_algo.c  test_big.c  test_big_mont.c  test_combinatorics.c  test_fac.c  test_mul_csa_pthreads.c  test_mul_rows.c  test_rho_brent.c
